<resources>
    <string name="app_name">SIREBA</string>

    <!-- LOG IN SCREEN -->
    <string name="loginTitle">SIREBA</string>
    <string name="loginIniciarSesion">Iniciar Sesion</string>
    <string name="loginLblEmail">Email</string>
    <string name="loginLblPassword">Contraseña</string>
    <string name="loginButtonCreateAccount">Crear Cuenta</string>

    <!--- CREATE ACCOUNT ACITIVTY -->
    <string name="createActTitle">Crear Cuenta</string>
    <string name="createActLblEmail">Email</string>
    <string name="createActLblPassword">Contraseña</string>
    <string name="createActCBTerms">Acepto los Terminos y Condiciones y las politicas de privacidad.</string>
    <string name="creactActButtonContinue">Continuar</string>
    <string name="createActEmailHint">ejemplo@email.com</string>

    <!--- START SCREEN ACTIVITY -->
    <string name="startScreenTitle">SIREBA</string>
    <string name="startScreenCreateReport">Crear un reporte</string>
    <string name="startScreenCheckReports">Consultar reportes</string>
    <string name="startScreenLogOut">Cerrar sesion</string>

    <!--- CREATE REPORT ACTIVITY -->
    <string name="createRpTitle">Generar Reporte</string>
    <string name="createRpLblDate">Fecha</string>
    <string name="createRpLblCategory">Categoria</string>
    <string name="createRpLblDescription">Descripcion</string>
    <string name="createRpLblDescriptionHint">(Opcional)</string>
    <string name="createRpLblLocation">Ubicacion</string>
    <string name="createRpButtonSelectDate">Seleccionar fecha</string>
    <string name="createRpButtonSelectOnMap">Seleccionar ubicacion en el mapa</string>
    <string name="createRpButtonTakePicture">Tomar Fotografia</string>
    <string name="createRpButtonContinue">Continuar</string>

    <!--- CHECK REPORTS ACTIVITY -->
    <string name="checkRpTitle">Listado de reportes</string>

    <!--- VIEW REPORT ACTIVITY -->
    <string name="viewRpTitle">Reporte</string>
    <string name="viewRpDate">Fecha</string>
    <string name="viewRpCategory">Categoria</string>
    <string name="viewRpDescription">Descripcion</string>
    <string name="viewRpLocation">Ubicacion</string>
    <string name="viewRpPictureTaken">Fotografia tomada</string>
    <string name="viewRpViewOnMap">Ver en el mapa</string>

    <!--- LOCATION MAP ACTIVITY -->
    <string name="title_activity_report_map">SIREBA</string>
    
    <!--- NOTIFICATION INFO -->
    <string name="channel_name">Reporte</string>
    <string name="channel_description">Canal para crear nuevos reportes</string>

    <!--- REPORT RECYCLERVIEW CARD VIEW -->
    <string name="cvCategory">Categoria</string>
    <string name="cvDate">Fecha</string>
    <string name="cvDescription">(Sin descripcion)</string>
    <string name="cvBtnVer">Ver</string>
</resources>