<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ViewReportActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.ViewReportActivity">

    <TextView
        android:id="@+id/viewRpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/viewRPTitleTopMargin"
        android:layout_marginStart="@dimen/viewRPTVStartMargin"
        android:text="@string/viewRpTitle"
        android:textSize="@dimen/createActTitleTextSize"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/viewRpLblDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/viewRPTVStartMargin"
        android:layout_marginTop="@dimen/viewRPTVTopMargin"
        android:text="@string/viewRpDate"
        android:textColor="@color/colorMotivo"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewRpTitle"/>

    <EditText
        android:id="@+id/viewRpTxtDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/viewRPETStartMargin"
        android:layout_marginEnd="@dimen/viewRPETEndMargin"
        android:layout_marginTop="@dimen/viewRPETTopMargin"
        android:enabled="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewRpLblDate"/>

    <TextView
        android:id="@+id/viewRpLblCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/viewRPTVStartMargin"
        android:layout_marginTop="@dimen/viewRPTVTopMargin"
        android:text="@string/viewRpCategory"
        android:textColor="@color/colorMotivo"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewRpTxtDate"/>

    <EditText
        android:id="@+id/viewRpTxtCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/viewRPETStartMargin"
        android:layout_marginEnd="@dimen/viewRPETEndMargin"
        android:layout_marginTop="@dimen/viewRPETTopMargin"
        android:enabled="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewRpLblCategory"/>

    <TextView
        android:id="@+id/viewRpLblDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/viewRPTVStartMargin"
        android:layout_marginTop="@dimen/viewRPTVTopMargin"
        android:text="@string/viewRpDescription"
        android:textColor="@color/colorMotivo"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewRpTxtCategory"/>

    <EditText
        android:id="@+id/viewRpTxtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/viewRPETStartMargin"
        android:layout_marginEnd="@dimen/viewRPETEndMargin"
        android:layout_marginTop="@dimen/viewRPETTopMargin"
        android:enabled="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewRpLblDescription"/>

    <TextView
        android:id="@+id/viewRpLblLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/viewRPTVStartMargin"
        android:layout_marginTop="@dimen/viewRPTVTopMargin"
        android:text="@string/viewRpLocation"
        android:textColor="@color/colorMotivo"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewRpTxtDescription"/>

    <EditText
        android:id="@+id/viewRpTxtLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/viewRPETStartMargin"
        android:layout_marginEnd="@dimen/viewRPETEndMargin"
        android:layout_marginTop="@dimen/viewRPETTopMargin"
        android:enabled="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewRpLblLocation"/>

    <TextView
        android:id="@+id/viewRpLblPictureTaken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/viewRPTVStartMargin"
        android:layout_marginTop="@dimen/viewRPTVTopMargin"
        android:text="@string/viewRpPictureTaken"
        android:textColor="@color/colorMotivo"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewRpTxtLocation"/>

    <ImageView
        android:id="@+id/viewRpImageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/viewRPEVHeight"
        android:layout_marginTop="@dimen/viewRPEVTopMargin"
        android:layout_marginStart="@dimen/viewRPEVStartMargin"
        android:layout_marginEnd="@dimen/viewRPEVEndMargin"
        app:srcCompat="@drawable/image_placeholder"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewRpLblPictureTaken"/>

    <Button
        android:id="@+id/viewRpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/viewRPBTNTTopMargin"
        android:layout_marginStart="@dimen/viewRPBTNTStartMargin"
        android:layout_marginEnd="@dimen/viewRPBTNTEndMargin"
        android:layout_marginBottom="@dimen/viewRPBTNTBottomMargin"
        android:background="@drawable/green_button"
        android:textAllCaps="false"
        android:text="@string/viewRpViewOnMap"
        android:textColor="@color/colorPureWhite"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewRpImageView"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>