<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LogInActivity">

    <TextView
        android:id="@+id/loginScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/loginScreenTitleTopMargin"
        android:text="@string/loginTitle"
        android:textColor="@color/colorMotivo"
        android:textSize="@dimen/loginScreenTitleTextSize"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/loginTVStartMargin"
        android:layout_marginTop="@dimen/loginTitleTopMargin"
        android:text="@string/loginIniciarSesion"
        android:textSize="@dimen/loginTitleTextSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginScreenTitle" />

    <TextView
        android:id="@+id/loginLblEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/loginTVStartMargin"
        android:layout_marginTop="@dimen/loginEmailTopMargin"
        android:text="@string/loginLblEmail"
        android:textColor="@color/colorMotivo"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

    <EditText
        android:id="@+id/loginTxtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/loginETStartMargin"
        android:layout_marginEnd="@dimen/loginETEndMargin"
        android:layout_marginTop="@dimen/loginETTopMargin"
        android:inputType="textEmailAddress"
        android:hint="ejemplo@email.com"
        android:textColor="@color/colorPureBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginLblEmail" />

    <TextView
        android:id="@+id/loginLblPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/loginTVStartMargin"
        android:layout_marginTop="@dimen/loginPasswordTopMargin"
        android:text="@string/loginLblPassword"
        android:textColor="@color/colorMotivo"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTxtEmail" />

    <EditText
        android:id="@+id/loginTxtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/loginETStartMargin"
        android:layout_marginEnd="@dimen/loginETEndMargin"
        android:layout_marginTop="@dimen/loginETTopMargin"
        android:inputType="textPassword"
        android:textColor="@color/colorPureBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginLblPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/loginBTNStartMargin"
        android:layout_marginEnd="@dimen/loginBTNEndMargin"
        android:layout_marginTop="@dimen/loginBTNLogIn"
        android:text="@string/loginIniciarSesion"
        android:background="@drawable/green_button"
        android:textAllCaps="false"
        android:textColor="@color/colorPureWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTxtPassword" />

    <Button
        android:id="@+id/loginCreateAccountBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/loginBTNStartMargin"
        android:layout_marginEnd="@dimen/loginBTNEndMargin"
        android:layout_marginTop="@dimen/loginBTNCreateAccount"
        android:text="@string/loginButtonCreateAccount"
        android:textAllCaps="false"
        android:textColor="@color/colorPureBlack"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>